fix navigation sidebar being too wide for some phones, fix bug which caused back method/titles on nav to be wrong after creating account and signing in

--- a/packages/venia-concept/src/components/SignIn/signIn.css
+++ b/packages/venia-concept/src/components/SignIn/signIn.css
@@ -8,7 +8,7 @@
 .signInButton,
 .showCreateAccountButton {
     text-align: center;
-    margin: 1rem 0 0;
+    margin: 1rem 0;
 }
 
 .forgotPassword {
